[gd_scene load_steps=2 format=3 uid="uid://yrimjof0gtis"]

[ext_resource type="Script" uid="uid://t4x3oawf7ucn" path="res://menu.gd" id="1_bj1uy"]

[node name="menu_principal" type="Node3D"]

[node name="MenuPrincipal" type="Node" parent="."]
script = ExtResource("1_bj1uy")

[node name="CanvasLayer" type="CanvasLayer" parent="MenuPrincipal"]

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPrincipal/CanvasLayer"]
offset_left = 464.0
offset_top = 253.0
offset_right = 742.0
offset_bottom = 381.0

[node name="Label" type="Label" parent="MenuPrincipal/CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Jeu du Loup - Paramètres"

[node name="CoordinationCheckBox" type="CheckBox" parent="MenuPrincipal/CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Activer coordination entre loups"

[node name="ReproductionCheckBox" type="CheckBox" parent="MenuPrincipal/CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Activer reproduction"

[node name="StartButton" type="Button" parent="MenuPrincipal/CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Démarrer la simulation"
